maude-grammar/src/main/java/org/example/antlr4/Expr.g4
grammar Expr;

prog:	expr EOF ;

expr:	expr op=('*'|'/') expr # Multi
    |	expr op=('+'|'-') expr # Div
    |	INT #Int
    |	'(' expr ')' #Combo
    ;
NEWLINE : [ \r\n\t]+ -> skip;
INT     : [0-9]+ ;
